--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,33 @@
+version: "3.8"
+
 services:
   client:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "3000:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 
   server:
-    build: ./server
+    build:
+      context: ./server
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    environment:
-      - PORT=5000
-      - MONGO_URI=${MONGO_URI}
-      - SESSION_SECRET=${SESSION_SECRET}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}
+    env_file:
+      - ./.env
     depends_on:
       - mongo
 
   mongo:
     image: mongo
+    restart: always
     ports:
       - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
